--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseurl = "https://billyandhisblog.netlify.app/"
+baseurl = "https://billyasslin.github.io/"
 title = "Billy's Blog"
 theme = "ghostwriter"
 
